Fixed table cell alignment to be consistent across headers and footers

--- a/public/stylesheets/rails_admin/list.css
+++ b/public/stylesheets/rails_admin/list.css
@@ -86,8 +86,13 @@
 
 .grid tbody td {
   border-bottom:1px solid #b9b9b9;
-  padding: 9px 0;
-  text-align:center;
+  padding: 9px 0 9px 10px;
+  text-align:left;
+}
+.grid tbody th,
+.grid tbody td {
+  padding: 9px 0 9px 10px;
+  text-align:left;
 }
 
 .grid tbody .even {
